{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 16,
  "lineage": "9649c37f-393b-46c8-173f-73b775481123",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "managementnet-allow-http-ssh-rdp-icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "3389"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-01-12T08:06:19.106-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-04-965d68ae6851/global/firewalls/managementnet-allow-http-ssh-rdp-icmp",
            "log_config": [],
            "name": "managementnet-allow-http-ssh-rdp-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-965d68ae6851/global/networks/managementnet",
            "priority": 1000,
            "project": "qwiklabs-gcp-04-965d68ae6851",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-965d68ae6851/global/firewalls/managementnet-allow-http-ssh-rdp-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.managementnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "mynetwork-allow-http-ssh-rdp-icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "3389"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-01-12T08:12:35.122-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-04-965d68ae6851/global/firewalls/mynetwork-allow-http-ssh-rdp-icmp",
            "log_config": [],
            "name": "mynetwork-allow-http-ssh-rdp-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-965d68ae6851/global/networks/mynetwork",
            "priority": 1000,
            "project": "qwiklabs-gcp-04-965d68ae6851",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-965d68ae6851/global/firewalls/mynetwork-allow-http-ssh-rdp-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.mynetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "privatenet-allow-http-ssh-rdp-icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "3389"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-01-12T08:08:55.756-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-04-965d68ae6851/global/firewalls/privatenet-allow-http-ssh-rdp-icmp",
            "log_config": [],
            "name": "privatenet-allow-http-ssh-rdp-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-965d68ae6851/global/networks/privatenet",
            "priority": 1000,
            "project": "qwiklabs-gcp-04-965d68ae6851",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-965d68ae6851/global/firewalls/privatenet-allow-http-ssh-rdp-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.privatenet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "managementnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/qwiklabs-gcp-04-965d68ae6851/global/networks/managementnet",
            "mtu": 0,
            "name": "managementnet",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "4305221164190195082",
            "project": "qwiklabs-gcp-04-965d68ae6851",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-965d68ae6851/global/networks/managementnet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "mynetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/qwiklabs-gcp-04-965d68ae6851/global/networks/mynetwork",
            "mtu": 0,
            "name": "mynetwork",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "1782209211032984145",
            "project": "qwiklabs-gcp-04-965d68ae6851",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-965d68ae6851/global/networks/mynetwork"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "privatenet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/qwiklabs-gcp-04-965d68ae6851/global/networks/privatenet",
            "mtu": 0,
            "name": "privatenet",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "6274130311224548067",
            "project": "qwiklabs-gcp-04-965d68ae6851",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-965d68ae6851/global/networks/privatenet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "managementsubnet-us",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-12T08:06:20.480-08:00",
            "gateway_address": "10.130.0.1",
            "id": "projects/qwiklabs-gcp-04-965d68ae6851/regions/us-east1/subnetworks/managementsubnet-us",
            "ip_cidr_range": "10.130.0.0/20",
            "name": "managementsubnet-us",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-965d68ae6851/global/networks/managementnet",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-04-965d68ae6851",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-965d68ae6851/regions/us-east1/subnetworks/managementsubnet-us",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.managementnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "privatesubnet-second-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-12T08:08:58.098-08:00",
            "gateway_address": "172.20.0.1",
            "id": "projects/qwiklabs-gcp-04-965d68ae6851/regions/us-central1/subnetworks/privatesubnet-second-subnet",
            "ip_cidr_range": "172.20.0.0/24",
            "name": "privatesubnet-second-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-965d68ae6851/global/networks/privatenet",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-04-965d68ae6851",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-965d68ae6851/regions/us-central1/subnetworks/privatesubnet-second-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.privatenet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "privatesubnet-us",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-12T08:08:55.836-08:00",
            "gateway_address": "172.16.0.1",
            "id": "projects/qwiklabs-gcp-04-965d68ae6851/regions/us-east1/subnetworks/privatesubnet-us",
            "ip_cidr_range": "172.16.0.0/24",
            "name": "privatesubnet-us",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-965d68ae6851/global/networks/privatenet",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-04-965d68ae6851",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-965d68ae6851/regions/us-east1/subnetworks/privatesubnet-us",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.privatenet"
          ]
        }
      ]
    },
    {
      "module": "module.managementnet-us-vm",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240110",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-965d68ae6851/zones/us-east1-c/disks/managementnet-us-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-04-965d68ae6851/zones/us-east1-c/instances/managementnet-us-vm",
            "instance_id": "3211283270093036903",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "VwUNcb-Gt_E=",
            "name": "managementnet-us-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.73.21.202",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-965d68ae6851/global/networks/managementnet",
                "network_ip": "10.130.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-965d68ae6851/regions/us-east1/subnetworks/managementsubnet-us",
                "subnetwork_project": "qwiklabs-gcp-04-965d68ae6851"
              }
            ],
            "project": "qwiklabs-gcp-04-965d68ae6851",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-965d68ae6851/zones/us-east1-c/instances/managementnet-us-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-east1-c"
          },
          "dependencies": [
            "google_compute_network.managementnet",
            "google_compute_subnetwork.managementsubnet-us"
          ]
        }
      ]
    },
    {
      "module": "module.mynet-second-vm",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240110",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-965d68ae6851/zones/us-central1-c/disks/mynet-second-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-04-965d68ae6851/zones/us-central1-c/instances/mynet-second-vm",
            "instance_id": "4893268668811368987",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "VwUNcb-Gt_E=",
            "name": "mynet-second-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.121.88.24",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-965d68ae6851/global/networks/mynetwork",
                "network_ip": "10.128.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-965d68ae6851/regions/us-central1/subnetworks/mynetwork",
                "subnetwork_project": "qwiklabs-gcp-04-965d68ae6851"
              }
            ],
            "project": "qwiklabs-gcp-04-965d68ae6851",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-965d68ae6851/zones/us-central1-c/instances/mynet-second-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.mynetwork"
          ]
        }
      ]
    },
    {
      "module": "module.mynet-us-vm",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240110",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-965d68ae6851/zones/us-east1-c/disks/mynet-us-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-04-965d68ae6851/zones/us-east1-c/instances/mynet-us-vm",
            "instance_id": "440865438156249628",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "VwUNcb-Gt_E=",
            "name": "mynet-us-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.148.228.161",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-965d68ae6851/global/networks/mynetwork",
                "network_ip": "10.142.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-965d68ae6851/regions/us-east1/subnetworks/mynetwork",
                "subnetwork_project": "qwiklabs-gcp-04-965d68ae6851"
              }
            ],
            "project": "qwiklabs-gcp-04-965d68ae6851",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-965d68ae6851/zones/us-east1-c/instances/mynet-us-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-east1-c"
          },
          "dependencies": [
            "google_compute_network.mynetwork"
          ]
        }
      ]
    },
    {
      "module": "module.privatenet-us-vm",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240110",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-965d68ae6851/zones/us-east1-c/disks/privatenet-us-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-04-965d68ae6851/zones/us-east1-c/instances/privatenet-us-vm",
            "instance_id": "8349183158298401484",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "VwUNcb-Gt_E=",
            "name": "privatenet-us-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.231.221.32",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-965d68ae6851/global/networks/privatenet",
                "network_ip": "172.16.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-965d68ae6851/regions/us-east1/subnetworks/privatesubnet-us",
                "subnetwork_project": "qwiklabs-gcp-04-965d68ae6851"
              }
            ],
            "project": "qwiklabs-gcp-04-965d68ae6851",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-965d68ae6851/zones/us-east1-c/instances/privatenet-us-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-east1-c"
          },
          "dependencies": [
            "google_compute_network.privatenet",
            "google_compute_subnetwork.privatesubnet-us"
          ]
        }
      ]
    }
  ]
}